<resources>
    <string name="app_name">易迅网</string>
    <string name="guide_login">去登录</string>
    <string name="guide_slot">去摇一摇</string>
    <string name="guide_try">去试试</string>
    <string name="guide_coupon">去领奖</string>
    <string name="select_default">请选择...</string>
    <string name="area_init_error">初始化地区错误</string>
    <string name="address_not_exist">配送地址信息不存在</string>
    <string name="select_province">选择省份</string>
    <string name="select_province_first">请先选择省份</string>
    <string name="select_city">选择县市</string>
    <string name="select_city_first">请先选择县市</string>
    <string name="select_area">选择地区</string>
    <string name="select_area_first">请先选择地区</string>
    <string name="phone_number_error">联系电话有误</string>
    <string name="no_recipient">请输入收货人!</string>
    <string name="no_phone">请输入联系电话!</string>
    <string name="no_phone_recharge">请输入你的手机号码</string>
    <string name="phone_format_error">联系电话格式有误(11位手机号码或021–12345678格式)</string>
    <string name="address_first">请输入您的详细地址!</string>
    <string name="params_error">参数错误</string>
    <string name="params_empty">数据为空，请稍后重试</string>
    <string name="btn_filter">筛选</string>
    <string name="category_belong">选择分类</string>
    <string name="filter_hasGood">只显示有货商品</string>
    <string name="filter_selfmarket">只显示自营商品</string>
    <string name="btn_ok">确定</string>
    <string name="btn_continue_buy">继续购买</string>
    <string name="btn_go">跳转</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_retry">重试</string>
    <string name="btn_delete">删除</string>
    <string name="btn_exit">退出</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_done">完成</string>
    <string name="btn_back">返回</string>
    <string name="btn_refresh">刷新重试</string>
    <string name="btn_change_num">修改手机号</string>
    <string name="btn_stay">继续逛逛</string>
    <string name="server_error">服务器端错误</string>
    <string name="need_login">请先登录</string>
    <string name="del_favorite">删除收藏</string>
    <string name="add_favorite_error">收藏失败</string>
    <string name="add_favorite_succ">收藏成功</string>
    <string name="had_favorite_msg">您已收藏过该商品</string>
    <string name="remove_favorite_error">取消收藏失败</string>
    <string name="remove_favorite_success">取消收藏成功</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="add_cart_done">已加入购物车</string>
    <string name="add_cart_ok">加入购物车成功</string>
    <string name="add_cart_msg">商品已加入购物车</string>
    <string name="add_cart_error">加入购物车失败,请重试</string>
    <string name="go_checkout">去结算</string>
    <string name="not_checkout">再逛逛</string>
    <string name="custom_phone">您购买的是定制机, 从网站下单可获得更多优惠</string>
    <string name="buy_max">限购%d件</string>
    <string name="buy_max_msg">此商品限购%1$d件, 购物车中已有%2$d件</string>
    <string name="buy_max_msg_short">此商品最多可以购买%d件</string>
    <string name="buy_min_msg_short">本商品%d件起售&#160;</string>
    <string name="distribution_city">配送城市</string>
    <string name="review_star">%d分</string>
    <string name="satisfy">满意</string>
    <string name="general">一般</string>
    <string name="unsatisfy">不满意</string>
    <string name="satisfy_num">满意(%d)</string>
    <string name="general_num">一般(%d)</string>
    <string name="unsatisfy_num">不满意(%d)</string>
    <string name="parser_error">解析错误</string>
    <string name="parser_error_msg">抱歉，服务暂时抛锚了，小易正在奋力解决！</string>
    <string name="all_userPoint">本次最多可用 %1$d 积分,最多可抵用 %2$.1f 元</string>
    <string name="non_image_hint">在WIFI网络下不生效</string>
    <string name="network_error">请检查您的网络情况</string>
    <string name="network_error_info">如果网络正常，建议稍后片刻再试</string>
    <string name="title_network_error">网络错误</string>
    <string name="es_info">1. 请在收货时提供&lt;u&gt;&lt;font color=\&quot;#444444\&quot;&gt;身份证复印件&lt;/font&gt;&lt;/u&gt;（正反面复印于同一纸面上）；若您提供的信息不符或不全，送货员将收回商品。&lt;br /&gt;2. 请在易迅提供的《“节能产品惠民工程”用户承诺书》上签字承诺。&lt;br /&gt;3. 购买后您需配合国家展开的“节能产品惠民工程”相关专项核查，不配合核查工作将追回补贴。</string>
    <string name="arrival_notify">到货提醒</string>
    <string name="add_notify_success">已添加到货通知</string>
    <string name="add_notify_failed">添加到货通知出错</string>
    <string name="vp_phone_number_empty">请输入手机号码</string>
    <string name="vp_phone_error">获取信息失败，请尝试重新输入手机号！</string>
    <string name="vp_get_phone_msg_error">抱歉，获取充值信息失败，请尝试刷新或修改手机号</string>
    <string name="share_title">分享给朋友</string>
    <string name="share_content">我在 @%1$s 看到%2$s，易迅价只要%3$s，大家快来抢吧！ %4$s</string>
    <string name="weibo_account">易迅网官网</string>
    <string name="icson_account">易迅网</string>
    <string name="recommend_apps">应用推荐</string>
    <string name="call_support">立即拨打</string>
    <string name="resend_sms">重新发送</string>
    <string name="smscode_empty">请输入您收到的手机验证码</string>
    <string name="getting_smscode">正在获取验证码&#8230;</string>
    <string name="get_smscode_failed">获取手机验证码失败, 请稍后重试</string>
    <string name="bind_mobile_now">立即绑定</string>
    <string name="mobile_input_error">请输入正确的手机号码</string>
    <string name="icson_copyright_time">©2006-%1$d</string>
    <string name="icson_copyright">上海易迅电子商务发展有限公司</string>
    <string name="message_center">消息中心</string>
    <string name="call_service">拨打客服电话</string>
    <string name="reviews_count">%1$d个评论</string>
    <string name="no_reviews">暂无评论</string>
    <string name="no_messages_yet">暂时没有新消息, 祝您购物愉快</string>
    <string name="icson_gjp_jgbh_title">支持服务</string>
    <string name="share_loading">分享</string>
    <string name="initializing_content">正在生成分享信息, 请稍后...</string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_status">请将二维码置于取景框内扫描。  </string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="scan_result">二维码内容</string>
    <string name="login_activity_error">登录异常，请稍候重试</string>
    <string name="login_activity_input_username">请输入易迅帐号</string>
    <string name="login_activity_input_QQ">请输入QQ号码</string>
    <string name="login_activity_input_pwd">请输入密码</string>
    <string name="login_activity_input_pwd_error">密码错误</string>
    <string name="login_activity_input_name_error">帐号不存在</string>
    <string name="login_activity_loading">正在登录，请稍候...</string>
    <string name="login_activity_tel">易迅客服：&lt;u&gt;&lt;font color="#4f96f8">400-828-1878&lt;/font>&lt;/u&gt;</string>
	<string name="call_devliver_prefix">是否拨打快递员电话:</string>
	<string name="call_receiver_prefix">是否拨打收件人电话:</string>
	<string name="btn_call">拨打</string>
	<string name="item_count">共%1$d件</string>
	<string name="distance_hint_header">快递员距收货地仅剩</string>
	<string name="cargo_map_fail">暂时无法获取订单地图信息.\n如急需了解包裹位置,请联系配送师傅 </string>
	<string name="btn_text_pay_now">去支付</string>
	<string name="btn_text_comment_now">去评论</string>
	<string name="btn_text_cancel_order">取消订单</string>
	<string name="btn_text_view_map">查看快递员位置</string>
	<string name="my_points_title">我的积分</string>
	<string name="my_balance_title">我的余额</string>
	<string name="default_slogan">我们够用心, 你们购放心!</string>
	<string name="select_invoice">选择发票</string>
	<string name="add_invoice">增加新发票</string>
	<string name="is_sure_del_invoice">确认删除此发票?</string>
	<string name="edit_invoice">编辑发票</string>
	<string name="invoice_type">发票类型</string>
	<string name="invoice_content">发票内容</string>
	<string name="invoice_title">发票抬头</string>
	<string name="hint_invoice_select_type">请选择发票类型</string>
	<string name="hint_invoice_select_content">请选择发票内容</string>
	<string name="hint_invoice_fill_title">请填写发票抬头</string>
	<string name="invoice_type_personal">商业零售发票(个人)</string>
	<string name="invoice_type_vad">增值税专用发票</string>
	<string name="invoice_type_company">商业零售发票(单位)</string>
	<string name="invoice_type_retail">普通发票</string>
	<string name="invoice_company_name">公司名称</string>
	<string name="invoice_company_addr">公司地址</string>
	<string name="invoice_company_tel">公司电话</string>
	<string name="invoice_tax_num">税号</string>
	<string name="invoice_bank_account">银行账号</string>
	<string name="invoice_bank_branch">开户行</string>
	<string name="invoice_company_name_empty">请输入单位名称</string>
	<string name="invoice_company_addr_empty">请输入公司地址</string>
	<string name="invoice_company_tel_empty">请输入公司电话</string>
	<string name="invoice_tax_num_empty">请输入公司税号</string>
	<string name="invoice_bank_account_empty">请输入银行帐号</string>
	<string name="invoice_bank_branch_empty">请输入开户行信息</string>
	<string name="invoice_info_error">发票信息不合法，请检查确认</string>
	<string name="invoice_delete_success">发票删除成功</string>
	<string name="invoice_default_vad_content">商品明细</string>
	<string name="use_coupon_title">使用优惠券</string>
	<string name="add_coupon_code">请填写优惠券代码</string>
	<string name="use_coupon">使用</string>
	<string name="my_coupon">我的优惠券</string>
	<string name="no_coupon">您还没有优惠券</string>
	<string name="coupon_validity">有效期</string>
	<string name="default_coupon">$100</string>
	<string name="my_address_title">我的地址</string>
	<string name="edit_address">编辑地址</string>
	<string name="is_sure_del_address">确认删除此地址?</string>
	<string name="address_person_name">收货人</string>
	<string name="address_person_hint">请填写收货人姓名</string>
	<string name="address_phone_num">手机号码</string>
	<string name="address_phone_hint">请填写手机号码</string>
	<string name="address_province_name">选择省份</string>
	<string name="address_choose_hint">请选择</string>
	<string name="address_city_name">城市</string>
	<string name="address_zone_name">选择区/县</string>
	<string name="address_detail">详细地址</string>
	<string name="address_detail_hint">请填写详细地址</string>
	<string name="orderconfirm_title">确认订单</string>
	<string name="orderconfirm_shiptype_title">配送方式</string>
	<string name="package_no_x">包裹%d </string>
	<string name="orderconfirm_ship_time_title">配送时间</string>
	<string name="orderconfirm_pre_ship_time_title">预计发货时间</string>
	<string name="orderconfirm_combineship_time_title">统一配送时间</string>
	<string name="orderconfirm_paytype_title">支付方式</string>
	<string name="orderconfirm_address_title">收货地址</string>
	<string name="orderconfirm_invoice_title">发票信息</string>
	<string name="orderconfirm_coupon_title">优惠券</string>
	<string name="orderconfirm_point_title">使用积分</string>
	<string name="orderconfirm_beizhu_title">若您对订单有特殊要求，可在此备注</string>
	<string name="orderconfirm_product_title">商品列表</string>
	<string name="orderconfirm_point_warning">本次最多使用0积分</string>
	<string name="orderconfirm_point_default_num">0</string>
	<string name="orderconfirm_total_price">商品总价</string>
	<string name="orderconfirm_carriage_price">运费金额</string>
	<string name="orderconfirm_point_price">积分抵扣</string>
	<string name="orderconfirm_discount">返现优惠</string>
	<string name="orderconfirm_promo_price">促销优惠</string>
	<string name="orderconfirm_total">合计</string>
	<string name="channel_rush">易抢频道</string>
	<string name="channel_popular">热门活动</string>
	<string name="snap_up">抢购</string>
	<string name="snap_up_info">每日精选 全网最低</string>
	<string name="time_buy">早晚市</string>
	<string name="time_buy_promotion">早上买 下午到</string>
	<string name="time_buy_info">7:00 - 23:00</string>
	<string name="groupon">团购</string>
	<string name="button_clear">清空</string>
	<string name="refilter">重新筛选</string>
	<string name="filter_product_no_attrs">该商品暂无筛选条件</string>
	<string name="confirm_string">提交</string>
	<string name="my_comment">我的评论</string>
	<string name="comment_product_price">商品评分</string>
	<string name="comment_operation_title">请点击相应的星级进行评分</string>
	<string name="comment_operation_level_one">非常不满意</string>
	<string name="comment_operation_level_two">不满意</string>
	<string name="comment_operation_level_three">一般</string>
	<string name="comment_operation_level_four">满意</string>
	<string name="comment_operation_level_five">非常满意</string>
	<string name="comment_content_title">评论内容</string>
	<string name="comment_content_hint">字数长度请在5-1000字之间</string>
</resources>